<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_slam"
        android:icon="@drawable/ic_map"
        android:title="SLAM" />
    <item
        android:id="@+id/navigation_controls"
        android:icon="@drawable/ic_gamepad"
        android:title="@string/title_controls" />
    <item
        android:id="@+id/navigation_logs"
        android:icon="@drawable/ic_assignment"
        android:title="@string/title_logs" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />
</menu>
