<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.varunvaidhiya.robotcontrol.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_slam"
        android:name="com.varunvaidhiya.robotcontrol.ui.slam.SlamMapFragment"
        android:label="SLAM Map"
        tools:layout="@layout/fragment_slam_map" />

    <fragment
        android:id="@+id/navigation_controls"
        android:name="com.varunvaidhiya.robotcontrol.ui.controls.ControlsFragment"
        android:label="@string/title_controls"
        tools:layout="@layout/fragment_controls" />

    <fragment
        android:id="@+id/navigation_logs"
        android:name="com.varunvaidhiya.robotcontrol.ui.logs.LogsFragment"
        android:label="@string/title_logs"
        tools:layout="@layout/fragment_logs" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.varunvaidhiya.robotcontrol.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
